--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -373,3 +373,14 @@
   margin: 3rem 0;
   margin-bottom: 0px;
 }
+
+ul.icons {
+  padding-left: 0px;
+  text-align: left;
+
+}
+
+ul.icons > li {
+  display: inline-block;
+  padding: 10px 20px;
+}
