--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,7 +64,8 @@
     --color-text-light: #4f5969;
     --color-heading: #1a202c;
     --color-heading-black: black;
-    --color-accent: #d1dce5;
+    --color-accent: #acc2d4;
+    --color-second-accent: #f3f1bd;
   }
   
   /* HTML elements */
@@ -346,6 +347,12 @@
   background-color: black;
 }
 
+.section-highlighter {
+  margin: 0px;
+  max-width: 100%;
+  background-color: var(--color-accent);
+}
+
 .site-description {
   color: #b6b6b8;
 }
@@ -385,5 +392,30 @@ ul.icons {
 ul.icons > li {
   display: inline-block;
   padding: 10px 20px;
-  font-size: var(--fontSize-6)
+  font-size: var(--fontSize-6);
+}
+
+/* Cards */
+
+.todo-card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 3px 3px 5px 6px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  background-color: var(--color-second-accent);
+  padding: var(--spacing-4);
+  margin: var(--spacing-20);
+  margin-right: var(--spacing-32);
+  font-size: var(--fontSize-2);
+  font-family: var(--fontFamily-sans);
+}
+
+.goal-card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  background-color: var(--color-accent);
+  padding: var(--spacing-4);
+  margin: var(--spacing-4);
 }
