--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -420,3 +420,13 @@ ul.icons > li {
   padding: var(--spacing-4);
   margin: var(--spacing-4);
 }
+
+.pdf-container {
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  padding: var(--spacing-4);
+  margin: var(--spacing-4);
+  height: 500px;
+  width: 60%;
+}
