--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -421,6 +421,15 @@ ul.icons > li {
   margin: var(--spacing-4);
 }
 
+.project-post-card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  padding: var(--spacing-4);
+  margin: var(--spacing-4);
+}
+
 .pdf-container {
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -428,5 +437,5 @@ ul.icons > li {
   padding: var(--spacing-4);
   margin: var(--spacing-4);
   height: 500px;
-  width: 90%;
+  width: 70%;
 }
