--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -247,9 +247,9 @@
   /* Custom classes */
   
   .global-wrapper {
-    margin: var(--spacing-0) auto;
+    margin: var(--spacing-10) auto;
     max-width: var(--maxWidth-wrapper);
-    padding: var(--spacing-0) var(--spacing-0);
+    padding: var(--spacing-16) var(--spacing-16);
   }
   
   .global-wrapper[data-is-root-path="true"] .bio {
@@ -257,7 +257,8 @@
   }
   
   .global-header {
-    margin-bottom: var(--spacing-12);
+    padding: var(--spacing-12);
+    padding-bottom: var(--spacing-0);
     background-color: var(--color-heading-black);
   }
   
