--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -401,6 +401,23 @@ ul.icons > li {
   align-items: center;
 }
 
+ul.links {
+  padding-left: 0px;
+  text-align: right;
+  margin: 0px;
+
+}
+
+ul.links > li {
+  display: inline-block;
+  padding: 10px 10px;
+  font-size: var(--fontSize-4);
+  justify-content: right;
+  align-items: center;
+}
+
+/* Pages */
+
 /* Cards */
 
 .todo-card {
@@ -472,6 +489,57 @@ ul.icons > li {
   border-radius: 5px; /* 5px rounded corners */
   padding: var(--spacing-4);
   margin: var(--spacing-4);
+}
+
+.project-post-header {
+  grid-area: header
+
+}
+
+.project-post-image {
+  grid-area: image;
+  display:block;
+  width: 100%;
+  height: 100%;
+
+  
+}
+
+.project-auto-grid {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr))
+}
+.project-post-image:hover {
+  cursor: pointer;
+}
+
+.project-post-goals {
+  grid-area: goals
+}
+
+.project-post-links {
+  grid-area: links;
+  justify-content: right;
+
+}
+
+.project-post-container {
+  max-height: 500px;
+  max-width: 500px;
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  padding: var(--spacing-4);
+  margin: var(--spacing-4);
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 10% 80% 10%;
+  grid-template-areas: 
+    "header header"
+    "image image "
+    "goals links";
+
 }
 
 .pdf-container {
