--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -201,6 +201,10 @@
     margin-left: var(--spacing-8);
     margin-top: calc(var(--spacing-8) / 2);
   }
+
+  section {
+    margin-top: var(--spacing-24);
+  }
   
   blockquote {
     color: var(--color-text-light);
@@ -266,6 +270,7 @@
     font-size: var(--fontSize-7);
     margin: 0;
     margin-bottom: var(--spacing-5);
+    margin-top: var(--spacing-7);
   }
   
   .post-list-item {
