--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@
     --fontWeight-bold: 700;
     --fontWeight-extrabold: 800;
     --fontWeight-black: 900;
-    --fontSize-root: 14px;
+    --fontSize-root: 12px;
     --lineHeight-none: 1;
     --lineHeight-tight: 1.1;
     --lineHeight-normal: 1.5;
@@ -66,6 +66,7 @@
     --color-heading-black: black;
     --color-accent: #acc2d4;
     --color-second-accent: #f3f1bd;
+    --color-background-main: white; 
   }
   
   /* HTML elements */
@@ -171,6 +172,7 @@
     --x-height-multiplier: 0.35;
     margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
     padding: var(--spacing-0);
+    /*background-color: var(--color-background-main);*/
   }
   
   ul,
@@ -447,15 +449,15 @@ ul.links > li {
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
-  background-color: var(--color-accent);
+  /*background-color: var(--color-accent); */
   padding: var(--spacing-4);
-  margin: var(--spacing-20);
+  margin: var(--spacing-8);
 }
 
 .goal-card-icon {
   grid-area: sidebar;
   justify-self: center;
-  font-size: 3em
+  font-size: 1.5em
 }
 
 .goal-card-title {
@@ -467,11 +469,12 @@ ul.links > li {
   grid-area: content;
 }
 
-.goal-card-artifacts {
+.goal-card-footer {
   grid-area: footer;
-  display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
+  background-size: 100% 100%;
+  min-height: 30px; 
 
 }
 
@@ -480,13 +483,14 @@ ul.links > li {
   grid-template-columns: 15% 85%;
   grid-template-rows: auto;
   grid-template-areas: 
-    ". header"
-    "sidebar content"
-    ". footer";
+    "sidebar header"
+    "content content"
+    "footer footer";
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
-  background-color: var(--color-accent);
+  /*background-color: var(--color-accent); */
+  background-size: 100% 100%;
   padding: var(--spacing-4);
   margin: var(--spacing-8);  
 }
