--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -485,15 +485,15 @@ ul.links > li {
   grid-template-rows: auto;
   grid-template-areas: 
     "sidebar header"
-    "content content"
-    "footer footer";
+    "content content";
+    /*"footer footer";*/
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
   /*background-color: var(--color-accent); */
   background-size: 100% 100%;
   padding: var(--spacing-4);
-  margin: var(--spacing-8);  
+  margin: var(--spacing-4);  
 }
 
 .project-post-card {
@@ -524,6 +524,7 @@ ul.links > li {
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr))
 }
+
 .project-post-image:hover {
   cursor: pointer;
 }
@@ -545,7 +546,7 @@ ul.links > li {
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
-  padding: var(--spacing-16) var(--spacing-16) var(--spacing-16) var(--spacing-16);
+  padding: var(--spacing-4);
   margin: var(--spacing-4);
   display: grid;
   grid-template-columns: 50% 50%;
