--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -481,7 +481,7 @@ ul.links > li {
 
 .goal-card-grid {
   display: grid;
-  grid-template-columns: repeat( auto-fill, minmax(400px, 1fr) );
+  grid-template-columns: repeat( auto-fill, minmax(350px, 1fr) );
   grid-template-rows: auto;
 }
 
@@ -501,7 +501,7 @@ ul.links > li {
   padding: var(--spacing-4);
   margin: var(--spacing-4);  
   max-width: 800px;
-  min-width: 400px;
+  min-width: 350px;
 }
 
 .project-post-card {
@@ -511,6 +511,7 @@ ul.links > li {
   border-radius: 5px; /* 5px rounded corners */
   padding: var(--spacing-4);
   margin: var(--spacing-4);
+
 }
 
 .project-post-header {
@@ -520,17 +521,13 @@ ul.links > li {
 
 .project-post-image {
   grid-area: image;
-  display:block;
-  width: 100%;
-  height: 100%;
-
-  
+  display: contain;  
 }
 
 .project-auto-grid {
   display: grid;
   grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr))
+  grid-template-columns: repeat(auto-fill, minmax(90px, 1fr))
 }
 
 .project-post-image:hover {
