--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -214,10 +214,10 @@
   }
   
   blockquote {
-    margin-left: calc(-1 * var(--spacing-6));
-    margin-right: var(--spacing-8);
+   /* margin-left: calc(-1 * var(--spacing-6)); 
+    margin-right: var(--spacing-2); */
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
-    border-left: 200px solid var(--color-primary);
+    border-left: 4px solid var(--color-primary);
     margin-bottom: var(--spacing-8);
     font-weight: var(--fontWeight-medium);
   }
