--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -651,7 +651,7 @@ ul.links > li {
 
 }
 
-.centre-this {
+.center-this {
   margin: 0 auto;
 }
 
@@ -733,3 +733,4 @@ ul.links > li {
     opacity: 0.5;
   }
 }
+
