--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,7 +66,7 @@
     --color-accent: #acc2d4;
     --color-second-accent: #f3f1bd;
     --color-background-main: white; 
-    --padding-x: 12rem;
+    --padding-x: 14rem;
   }
   
   /* HTML elements */
@@ -278,10 +278,12 @@
   .global-header {
     padding:  var(--spacing-2) var(--padding-x) var(--spacing-0);
     background-color: var(--color-heading-black);
+    margin: 0 var(--spacing-4);
   }
 
   .global-header-div {
     height: 150px;
+    margin: 0 var(--spacing-2);
   }
 
   .site-title {
@@ -321,7 +323,8 @@
 
   .global-wrapper {
     max-width: var(--maxWidth-wrapper);
-    margin: var(--spacing-0) var(--padding-x);
+    padding: var(--spacing-0) var(--padding-x);
+    margin: 0 var(--spacing-4);
     padding-bottom: var(--spacing-32);
 
   }
