--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -278,7 +278,7 @@
   .global-header {
     padding:  var(--spacing-2) var(--padding-x) var(--spacing-0);
     background-color: var(--color-heading-black);
-    margin: 0 var(--spacing-4);
+    margin: 0 var(--spacing-2);
   }
 
   .global-header-div {
@@ -590,7 +590,8 @@ ul.links > li {
 
 .project-post-image {
   grid-area: image;
-  display: contain;  
+  display: fixed;  
+  max-height: 100%;
 }
 
 .project-auto-grid {
@@ -654,7 +655,7 @@ ul.links > li {
   margin: var(--spacing-4);
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: auto;
+  grid-template-rows: auto auto 175px auto;
   grid-template-areas: 
     "header header"
     "tags tags"
