--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -655,12 +655,30 @@ ul.links > li {
   margin: var(--spacing-4);
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: auto auto 175px auto;
+  grid-template-rows: auto;
   grid-template-areas: 
     "header header"
     "tags tags"
     "image image"
     "resourcetypes links";
+
+}
+
+.project-list-container {
+  background-color: var(--color-background-main);
+  max-height: 500px;
+  max-width: 800px;
+  min-width: 250px;
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px; /* 5px rounded corners */
+  padding: var(--spacing-4);
+  margin: var(--spacing-4);
+  display: grid;
+  grid-template-columns: 10% 75% 10%;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "resourcetypes header tags";
 
 }
 
