--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -490,18 +490,14 @@
 
 
 ul.icons {
-  padding-left: 0px;
-  text-align: centre;
+  justify-self: center;
   margin: 0px;
 
 }
 
 ul.icons > li {
   display: inline-block;
-  padding: 10px 10px;
   font-size: var(--fontSize-4);
-  justify-content: center;
-  align-items: center;
 }
 
 li.icons:hover,
@@ -650,6 +646,8 @@ ul.links > li {
   grid-area: image;
   display: fixed;  
   max-height: 100%;
+  justify-self: center;
+  padding-bottom: 10px;
 }
 
 .project-auto-grid {
@@ -664,11 +662,12 @@ ul.links > li {
 
 .project-post-resourcetypes {
   grid-area: resourcetypes;
+  align-self: start;
 }
 
 .project-post-links {
   grid-area: links;
-  justify-content: right;
+  align-self: start;
 }
 
 .project-post-tags {
@@ -712,7 +711,7 @@ ul.links > li {
   padding: var(--spacing-4);
   margin: var(--spacing-4);
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 75% 25%;
   grid-template-rows: auto;
   grid-template-areas: 
     "header header"
